<?xml version="1.0"?>
<package format="2">
  <name>ariles2_graphviz_catkin</name>
  <version>2.0.2</version>
  <description>Ariles serialization/configuration library (graphviz module)</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>ariles2_core_catkin</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
