<?xml version="1.0"?>
<package format="2">
  <name>ariles2_rosparam_ros</name>
  <version>2.0.0</version>
  <description>Ariles serialization/configuration library (rosparam module)</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ariles2_core_ros</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
