<?xml version="1.0"?>
<package format="2">
  <name>ariles2_catkin_demo</name>
  <version>0.0.0</version>
  <description>ariles2 demo / dependency test</description>

  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ariles2_core</depend>

  <export>
  </export>
</package>
